[gd_scene load_steps=7 format=3 uid="uid://ccnient6ijo62"]

[ext_resource type="Script" path="res://experiments/finite_state_player.gd" id="1_7tnt7"]
[ext_resource type="PackedScene" uid="uid://dqega6c6ige02" path="res://movement_state_machine.tscn" id="1_fumsx"]
[ext_resource type="Texture2D" uid="uid://bqeuc5oxc8ilk" path="res://player/robot_sprites_v3.png" id="2_sqx1x"]
[ext_resource type="PackedScene" uid="uid://oe14gxhs20vw" path="res://rocket_state_machine.tscn" id="2_xetxe"]
[ext_resource type="Script" path="res://player/player_actions.gd" id="4_x126a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d4s4n"]
size = Vector2(25, 27.875)

[node name="FiniteStatePlayer" type="CharacterBody2D"]
script = ExtResource("1_7tnt7")

[node name="RocketStateMachine" parent="." instance=ExtResource("2_xetxe")]
unique_name_in_owner = true

[node name="MovementStateMachine" parent="." instance=ExtResource("1_fumsx")]
unique_name_in_owner = true

[node name="PlayerActions" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_x126a")

[node name="Sprites" type="Node2D" parent="."]
position = Vector2(0, -32)

[node name="RobotSprites" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
texture_filter = 3
position = Vector2(0, 8)
texture = ExtResource("2_sqx1x")
hframes = 7
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13.9375)
shape = SubResource("RectangleShape2D_d4s4n")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_bottom_margin = 0.3
editor_draw_drag_margin = true
